--- a/index.html
+++ b/index.html
@@ -1,14 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>figma-1</title>
-    <link rel="stylesheet" href="./fonts/fonts.css">
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+  <body>
+    <header class="py-rem">
+      <div class="container">
+        <nav>
+          <a class="h1" href="./index.html"
+            ><span class="t1">Wisdome</span> <span class="two">Page</span></a
+          >
+          <a class="home" href="./index.html">Home</a>
+          <a class="home1" href="./index.html">About</a>
+          <a class="home1" href="./index.html">Features</a>
+        </nav>
+      </div>
+    </header>
+    <main>
+      <section class="py-rem first-section">
+        <div class="container">
+          <div class="block">
+            <h2 class="t11">
+              KNOWLEDGE HAS A BEGINING <br />
+              BUT NO END
+            </h2>
+          </div>
+          <div class="blok02">
+            <h2 class="c2">About</h2>
+            <div class="content1">
+              <h3 class="co">Content subtitle</h3>
+              <p class="lor1 ">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                nulla pariatur.
+              </p>
+              <img class="photo1" src="./images/about-image.jpg" alt="" />
+            </div>
+          </div>
+          <div class="blok3">
+            <h3 class="c2">Features</h3>
+            <div class="wrapper">
+              <div class="card">
+                <img class="image" src="./images/card-image1.jpg" alt="one" />
+                <h2 class="c111">Card title</h2>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Curabitur ullamcorper velit tortor, in accumsan libero mollis
+                  eu. Sed vel eros et dolor...
+                </p>
+                <a href="./index.html">Read more → </a>
+              </div>
+              <div class="card">
+                <img class="image" src="./images/card-image2.jpg" alt="two" />
+                <h2 class="c111">Card title</h2>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Curabitur ullamcorper velit tortor, in accumsan libero mollis
+                  eu. Sed vel eros et dolor...
+                </p>
+                <a href="./index.html">Read more → </a>
+              </div>
+              <div class="card">
+                <img class="image" src="./images/card-image3.jpg" alt="three" />
+                <h2 class="c111">Card title</h2>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Curabitur ullamcorper velit tortor, in accumsan libero mollis
+                  eu. Sed vel eros et dolor...
+                </p>
+                <a href="./index.html">Read more → </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <div class="footer">
+        <h4>© 2021 Wisdom page</h4>
+        <img class="l1" src="./images/twitter.png" alt="twitter" />
+        <img class="l1" src="./images/linked-in.svg" alt="linked" />
+        <img class="l1" src="./images/instagram.png" alt="instagram|" />
+      </div>
+      
+
+    </footer>
+  </body>
 </html>
